--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1504,48 +1504,6 @@ commands:
           command: pkill -SIGHUP -f "devcluster" && rm -rf /tmp/devcluster/lock
 
 jobs:
-  start-stop-devcluster:
-    parameters:
-      devcluster-config:
-        type: string
-        default: double.devcluster.yaml
-    machine:
-      image: <<pipeline.parameters.machine-image>>
-    resource_class: xlarge
-    environment:
-      DET_POSTGRES_VERSION: 10
-      DET_AGENT_VERSION: ""
-    steps:
-      - checkout
-      - add-and-fetch-upstream
-      - skip-if-only-docs
-      - skip-if-only-github
-      - skip-if-only-webui
-      - attach_workspace:
-          at: .
-
-      - setup-python-venv:
-          determined: True
-          extra-requirements-file: "e2e_tests/tests/requirements.txt"
-          executor: <<pipeline.parameters.machine-image>>
-      - install-devcluster
-      - start-devcluster:
-          devcluster-config: <<parameters.devcluster-config>>
-          target-stage: agent1
-      - run: sleep 10
-      - run:
-          name: Fetch latest commit
-          command: |
-            git fetch origin main
-            LATEST_MAIN_SHA=$(git rev-parse origin/main)
-            echo "LATEST_MAIN_SHA=$LATEST_MAIN_SHA" >> latest_commit.env  # Save to a file
-      - persist_to_workspace:
-          root: .
-          paths:
-            - latest_commit.env
-      - stop-devcluster
-
-   
   build-helm:
     docker:
       - image: <<pipeline.parameters.docker-image>>
@@ -3217,6 +3175,9 @@ jobs:
       k8s-version:
         type: string
         default: "1.29.5"
+      upgrade-branch:
+        type: string
+        default: $CIRCLE_SHA1
     machine:
       image: <<pipeline.parameters.machine-image>>
     resource_class: <<parameters.resource-class>>
@@ -3232,22 +3193,31 @@ jobs:
       - skip-if-only-webui
       - attach_workspace:
           at: .
-
-      - run: 
-          name: Export Latest Main SHA for upgrade tests
-          command: |
-            if [ -f latest_commit.env ]; then
-              echo "Latest commit file found."
-              source latest_commit.env
-              echo "LATEST_MAIN_SHA=$LATEST_MAIN_SHA" >> $BASH_ENV
-              git fetch origin $LATEST_MAIN_SHA && git checkout $LATEST_MAIN_SHA
-            else
-              echo "No latest commit file found. Skipping checkout."
-            fi
+      
+      - when:
+          # Only run this on the main branch when the tests are scheduled.
+          condition: <<pipeline.parameters.do_upgrade_tests>>
+          steps:
+            # Upgrade test portion: downgrade to specified version, start/stop devcluster
+            - run: 
+                name: Get Determined version branch commits.
+                command: |
+                  commit=$(git rev-parse "<<parameters.upgrade-branch>>")
+                  echo "Latest commit for <<parameters.upgrade-branch>>: $commit"
+                  echo "export HEAD_COMMIT=$commit" >> $BASH_ENV
+            - setup-python-venv:
+                determined: True
+                extra-requirements-file: "e2e_tests/tests/requirements.txt"
+                determined-SHA: $HEAD_COMMIT
+            - install-devcluster
+            - start-devcluster:
+                devcluster-config: <<parameters.devcluster-config>>
+                target-stage: agent1
+            - run: sleep 10
+            - stop-devcluster
 
       - setup-python-venv:
           determined: True
-          determined-SHA: $LATEST_MAIN_SHA
           extra-requirements-file: "e2e_tests/tests/requirements.txt"
           executor: <<pipeline.parameters.machine-image>>
 
@@ -4788,15 +4758,6 @@ workflows:
       - build-helm
       - build-react:
           dev-mode: true
-      - test-e2e-react:
-          name: test-e2e-react-ee
-          ee: true
-          requires:
-            - build-go-ee
-          context:
-            - playwright
-            - github-read
-            - dev-ci-cluster-default-user-credentials
       - build-docs:
           requires:
             - build-helm
@@ -4804,32 +4765,6 @@ workflows:
       - build-go:
           name: build-go-ee
           context: github-read
-
-      - start-stop-devcluster:
-          context:
-            - dev-ci-cluster-default-user-credentials
-            - github-read
-          requires:
-            - build-go-ee
-          name: start-stop-devcluster
-      - build-go: 
-          name: build-upgraded-go
-          context: github-read
-          requires:
-            - start-stop-devcluster
-
-      - start-stop-devcluster:
-          context:
-            - dev-ci-cluster-default-user-credentials
-            - github-read
-          requires:
-            - build-go-ee
-          name: start-stop-rbac-devcluster
-      - build-go: 
-          name: build-upgraded-rbac-go
-          context: github-read
-          requires:
-            - start-stop-devcluster 
 
       - test-e2e:
           name: test-e2e-cpu
@@ -4841,6 +4776,9 @@ workflows:
           resource-class: xlarge
           tf2: true
           mark: e2e_cpu
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-cpu-double
@@ -4854,6 +4792,9 @@ workflows:
           mark: e2e_cpu_2a
           target-stage: agent2
           devcluster-config: double-priority.devcluster.yaml
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-cpu-oauth
@@ -4865,6 +4806,9 @@ workflows:
           devcluster-config: oauth.devcluster.yaml
           mark: test_oauth
           target-stage: agent1
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-managed-devcluster
@@ -4881,6 +4825,9 @@ workflows:
           # so `compare_stats` cannot get the full logs from `det master logs`.
           extra-pytest-flags: "--no-compare-stats"
           collect-det-job-logs: false
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-managed-devcluster-resource-pools
@@ -4895,6 +4842,9 @@ workflows:
           managed-devcluster: true
           extra-pytest-flags: "--no-compare-stats"
           collect-det-job-logs: false
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-multi-k8s
@@ -4909,6 +4859,9 @@ workflows:
           devcluster-config: multi-k8s.devcluster.yaml
           run-minikubes: true
           multi-k8s: true
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-single-k8s
@@ -4921,6 +4874,9 @@ workflows:
           target-stage: master
           devcluster-config: single-k8s.devcluster.yaml
           run-minikubes: true
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-port-registry
@@ -4932,6 +4888,9 @@ workflows:
           devcluster-config: port-registry.devcluster.yaml
           mark: port_registry
           target-stage: agent
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-cpu-elastic
@@ -4944,6 +4903,9 @@ workflows:
           mark: e2e_cpu_elastic
           devcluster-config: elastic.devcluster.yaml
           target-stage: agent
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-postgres10-with-ssl
@@ -4956,6 +4918,9 @@ workflows:
           devcluster-config: postgres-with-ssl.devcluster.yaml
           target-stage: agent
           postgres-version: "10"
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-postgres14-with-ssl
@@ -4968,6 +4933,9 @@ workflows:
           devcluster-config: postgres-with-ssl.devcluster.yaml
           target-stage: agent
           postgres-version: "14"
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-old-agent-versions
@@ -4981,6 +4949,7 @@ workflows:
           target-stage: agent
           matrix:
             parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
               agent-version: ["0.17.10"]
 
       - test-e2e:
@@ -4994,6 +4963,9 @@ workflows:
           wait-for-master: false
           extra-pytest-flags: "--no-compare-stats"
           collect-det-job-logs: false
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-saml
@@ -5005,6 +4977,9 @@ workflows:
           parallelism: 1
           devcluster-config: saml.devcluster.yaml
           mark: e2e_saml
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
       
       - test-e2e:
           name: test-e2e-rbac
@@ -5015,6 +4990,9 @@ workflows:
           parallelism: 1
           mark: e2e_cpu_rbac
           devcluster-config: single-rbac.devcluster.yaml
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
       - test-e2e:
           name: test-e2e-cpu-model-registry-rbac
@@ -5026,6 +5004,9 @@ workflows:
           devcluster-config: rbac-model-registry.yaml
           mark: test_model_registry_rbac
           target-stage: agent1
+          matrix:
+            parameters:
+              upgrade-branch: ["carolinac/upgradetests", "release-0.32.0", "release-0.35.0"]
 
   test-e2e-longrunning:
     <<: *do-not-run-on-manual-trigger
