--- a/examples/computer_vision/iris_tf_keras/adaptive.yaml
+++ b/examples/computer_vision/iris_tf_keras/adaptive.yaml
@@ -1,7 +1,4 @@
 name: iris_tf_keras_adaptive_search
-data:
-  train_url: http://download.tensorflow.org/data/iris_training.csv
-  test_url: http://download.tensorflow.org/data/iris_test.csv
 environment:
   image:
     cpu: determinedai/tensorflow-ngc-dev:0736b6d
@@ -25,7 +22,9 @@ searcher:
   name: adaptive_asha
   metric: val_categorical_accuracy
   smaller_is_better: false
-  max_length:
-    batches: 6400
+  time_metric: batches
+  max_time: 6400
   max_trials: 512
-entrypoint: python3 -m determined.launch.horovod --autohorovod --trial model_def:IrisTrial
+entrypoint: >-
+  python3 -m determined.launch.tensorflow --
+  python3 train.py
