--- a/examples/computer_vision/iris_tf_keras/const.yaml
+++ b/examples/computer_vision/iris_tf_keras/const.yaml
@@ -1,7 +1,4 @@
 name: iris_tf_keras_const
-data:
-  train_url: http://download.tensorflow.org/data/iris_training.csv
-  test_url: http://download.tensorflow.org/data/iris_test.csv
 environment:
   image:
     cpu: determinedai/tensorflow-ngc-dev:0736b6d
@@ -15,6 +12,6 @@ searcher:
   name: single
   metric: val_categorical_accuracy
   smaller_is_better: false
-  max_length:
-    batches: 5000
-entrypoint: python3 -m determined.launch.horovod --autohorovod --trial model_def:IrisTrial
+entrypoint: >-
+  python3 -m determined.launch.tensorflow --
+  python3 train.py
