--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -3205,6 +3205,8 @@ jobs:
                   commit=$(git rev-parse "<<parameters.upgrade-branch>>")
                   echo "Latest commit for <<parameters.upgrade-branch>>: $commit"
                   echo "export HEAD_COMMIT=$commit" >> $BASH_ENV
+            - build-go:
+                ee: true
             - setup-python-venv:
                 determined: True
                 extra-requirements-file: "e2e_tests/tests/requirements.txt"
@@ -4772,7 +4774,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 6
           resource-class: xlarge
           tf2: true
@@ -4786,7 +4788,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 5
           resource-class: large
           tf2: true
@@ -4802,7 +4804,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           devcluster-config: oauth.devcluster.yaml
           mark: test_oauth
@@ -4816,7 +4818,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 4
           resource-class: large
           tf2: true
@@ -4835,7 +4837,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 4
           resource-class: large
           tf2: true
@@ -4852,7 +4854,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           tf2: true
           mark: e2e_multi_k8s
@@ -4869,7 +4871,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           mark: e2e_single_k8s
           target-stage: master
@@ -4884,7 +4886,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           devcluster-config: port-registry.devcluster.yaml
           mark: port_registry
@@ -4898,7 +4900,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           resource-class: large
           mark: e2e_cpu_elastic
@@ -4913,7 +4915,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           mark: e2e_cpu_postgres
           devcluster-config: postgres-with-ssl.devcluster.yaml
@@ -4928,7 +4930,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           mark: e2e_cpu_postgres
           devcluster-config: postgres-with-ssl.devcluster.yaml
@@ -4943,7 +4945,7 @@ workflows:
           context:
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           mark: e2e_cpu_postgres
           devcluster-config: custom-agent-version.devcluster.yaml
@@ -4956,7 +4958,7 @@ workflows:
       - test-e2e:
           name: test-e2e-agent-connection-loss
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           mark: e2e_cpu_agent_connection_loss
           devcluster-config: agent-no-connection.devcluster.yaml
@@ -4974,7 +4976,7 @@ workflows:
             - okta
             - dev-ci-cluster-default-user-credentials
           requires:
-            - build-upgraded-go
+            - build-go
           parallelism: 1
           devcluster-config: saml.devcluster.yaml
           mark: e2e_saml
