--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -101,6 +101,14 @@ release-dryrun: &release-dryrun
       # Tags like: v3.1.3+dryrun
       - /v\d+\.\d+\.\d+\+dryrun/
 
+release-upgrade: &release-upgrade
+  branches:
+    only:
+      - "release-0.35.0"
+      - "release-0.32.0"
+      - carolinac/upgrade-tests 
+
+
 upstream-feature-branch: &upstream-feature-branch
   branches:
     ignore:
@@ -3190,6 +3198,7 @@ jobs:
             - run: 
                 name: Get Determined version branch commits.
                 command: |
+                  git fetch origin <<parameters.upgrade-branch>> && git checkout <<parameters.upgrade-branch>>
                   commit=$(git rev-parse "<<parameters.upgrade-branch>>")
                   echo "Latest commit for <<parameters.upgrade-branch>>: $commit"
                   echo "export HEAD_COMMIT=$commit" >> $BASH_ENV
@@ -4773,7 +4782,7 @@ workflows:
           mark: e2e_cpu
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-cpu-double
@@ -4789,7 +4798,7 @@ workflows:
           devcluster-config: double-priority.devcluster.yaml
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-cpu-oauth
@@ -4803,7 +4812,7 @@ workflows:
           target-stage: agent1
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-managed-devcluster
@@ -4822,7 +4831,7 @@ workflows:
           collect-det-job-logs: false
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-managed-devcluster-resource-pools
@@ -4839,7 +4848,7 @@ workflows:
           collect-det-job-logs: false
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-multi-k8s
@@ -4856,7 +4865,7 @@ workflows:
           multi-k8s: true
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-single-k8s
@@ -4871,7 +4880,7 @@ workflows:
           run-minikubes: true
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-port-registry
@@ -4885,7 +4894,7 @@ workflows:
           target-stage: agent
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-cpu-elastic
@@ -4900,7 +4909,7 @@ workflows:
           target-stage: agent
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-postgres10-with-ssl
@@ -4915,7 +4924,7 @@ workflows:
           postgres-version: "10"
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-postgres14-with-ssl
@@ -4930,7 +4939,7 @@ workflows:
           postgres-version: "14"
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-old-agent-versions
@@ -4944,7 +4953,7 @@ workflows:
           target-stage: agent
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
               agent-version: ["0.17.10"]
 
       - test-e2e:
@@ -4960,7 +4969,7 @@ workflows:
           collect-det-job-logs: false
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-saml
@@ -4974,7 +4983,7 @@ workflows:
           mark: e2e_saml
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
       
       - test-e2e:
           name: test-e2e-rbac
@@ -4987,7 +4996,7 @@ workflows:
           devcluster-config: single-rbac.devcluster.yaml
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
       - test-e2e:
           name: test-e2e-cpu-model-registry-rbac
@@ -5001,7 +5010,7 @@ workflows:
           target-stage: agent1
           matrix:
             parameters:
-              upgrade-branch: ["carolinac/upgrade-tests", "release-0.32.0", "release-0.35.0"]
+              upgrade-branch: *release-upgrade
 
   test-e2e-longrunning:
     <<: *do-not-run-on-manual-trigger
