--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -102,10 +102,9 @@ release-dryrun: &release-dryrun
       - /v\d+\.\d+\.\d+\+dryrun/
 
 release-upgrade: &release-upgrade
-  branches:
-      - "release-0.35.0"
-      - "release-0.32.0"
-      - carolinac/upgrade-tests
+  - "release-0.35.0"
+  - "release-0.32.0"
+  - "carolinac/upgrade-tests"
 
 
 upstream-feature-branch: &upstream-feature-branch
