--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -3196,7 +3196,7 @@ jobs:
             - run: 
                 name: Get Determined version branch commits.
                 command: |
-                  git fetch origin <<parameters.upgrade-branch>> && git checkout <<parameters.upgrade-branch>>
+                  git fetch origin <<parameters.upgrade-branch>> && git checkout --track origin/<<parameters.upgrade-branch>>
                   commit=$(git rev-parse "<<parameters.upgrade-branch>>")
                   echo "Latest commit for <<parameters.upgrade-branch>>: $commit"
                   echo "export HEAD_COMMIT=$commit" >> $BASH_ENV
